Add Max-duration support
